[package]
name = "memtally"
version = "0.1.2"
edition = "2024"
description = "A wrapper for some collection types that keeps track of indirectly allocated heap memory"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/memtally/latest/memtally/"

[features]
binary-heap-plus = ["dep:binary-heap-plus", "dep:compare"]

[dependencies]
cfg-if = "1"

# Feature `binary-heap-plus`
compare = { version = "0.1", optional = true }
binary-heap-plus = { version = "0.5", optional = true }

# Compatibility features
get-size = { version = "0.1", optional = true }
get-size2 = { version = "0.4", optional = true }
memuse = { version = "0.2", optional = true }
